<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:descendantFocusability="blocksDescendants">

    <ImageView
        android:id="@+id/img_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="208dp"
        android:scaleType="centerCrop"
        android:src="@color/teal_700"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_poster"
        android:layout_width="100dp"
        android:layout_height="150dp"
        android:layout_margin="24dp"
        android:scaleType="matrix"
        android:src="@color/teal_200"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_banner" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_poster"
        app:layout_constraintTop_toTopOf="@id/img_poster"
        tools:text="@string/title" />

    <TextView
        android:id="@+id/text_year"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/year"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_title" />

    <LinearLayout
        android:id="@+id/ll_data"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@+id/img_poster"
        app:layout_constraintTop_toBottomOf="@+id/img_poster">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_release_date_black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginTop="4dp"
                android:textColor="?android:attr/textColorSecondary"
                android:textSize="14sp"
                tools:text="@string/release_date" />
        </LinearLayout>

        <include layout="@layout/vertical_divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_time_black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_duration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/duration"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>

        <include layout="@layout/vertical_divider"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_gravity="center"
                app:srcCompat="@drawable/ic_star_black"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/text_score"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="center"
                android:text="@string/score"
                android:textColor="?android:attr/textColorSecondary" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/text_genre"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/genre"
        android:textColor="?android:attr/textColorSecondary"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/text_title"
        app:layout_constraintTop_toBottomOf="@id/text_year" />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/overview"
        android:textColor="?android:attr/textColorPrimary"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@id/text_title"
        app:layout_constraintStart_toStartOf="@id/img_poster"
        app:layout_constraintTop_toBottomOf="@id/ll_data" />

    <TextView
        android:id="@+id/text_overview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:paddingBottom="32dp"
        android:gravity="start"
        android:text="@string/very_long_string"
        android:textColor="?android:attr/textColorSecondary"
        app:layout_constraintEnd_toEndOf="@id/tv_overview"
        app:layout_constraintStart_toStartOf="@id/tv_overview"
        app:layout_constraintTop_toBottomOf="@id/tv_overview" />


</androidx.constraintlayout.widget.ConstraintLayout>