<resources>
    <string name="app_name">Movie Catalogue</string>
    <string name="title_detail_movie_activity">Detail Movie</string>
    <string name="title_detail_tv_show_activity">Detail Tv Show</string>
    <string name="movies">Movies</string>
    <string name="tv_shows">Tv Shows</string>
    <string name="favorites">Favorite</string>
    <string name="release_date">Release</string>
    <string name="overview">Overview</string>
    <string name="title">Title</string>
    <string name="very_long_string">very long string very long string very long string very long string very long string very long string very long string very long string very long string very long string very long string</string>
    <string name="duration">Duration</string>
    <string name="genre">Genre, Genre, Genre</string>
    <string name="score">Score</string>
    <string name="user_score">User Score</string>
    <string name="year">Year</string>
    <string name="now_playing">Now Playing</string>
    <string name="popular">Popular</string>
    <string name="top_rated">Top Rated</string>
    <string name="upcoming">Upcoming</string>
    <string name="on_air">On Air</string>
    <string name="airing_today">Airing Today</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_favorite">Menu favorite</string>
    <string name="message_undo">Batalkan menghapus item sebelumnya?</string>
    <string name="ok">OK</string>
    <string name="share_text">Segera tonton %s di platform kesayangan Anda</string>
</resources>